# outline_tool_backend

./: .gitignore  pyproject.toml  query_builder.py  requirements.txt  run-dev.sh
api/: __init__.py  config.py  exceptions.py  main.py  models.py
api/routers/: __init__.py  audit.py  data_import.py  matching.py  persons.py  stats.py  volumes.py  works.py
api/services/: __init__.py  audit.py  catalog_import.py  matching.py  ocr_import.py  opensearch.py  os_client.py  records.py  stats.py  tei_import.py  volumes.py
doc/: bdrc_sync_workflow.md  mappings.json  mappings_bec_changes.json  mappings_bec_texts.json  works_persons_operations.md
requests/: batch1.rq  batch1_filled.csv  fill_batch.py
scripts/: __init__.py  backfill_embeddings.py  baseline_jaccard.py  benchmark_dedup.py  build_minhash_sidecar.py  dedup_batch.py  entity_scores.py  fix_disk_block.py  import_batch.py  import_nlm.py  import_record.py  import_tei.py  sync_bdrc.py  sync_texts.py  tei_to_standoff.py  trig_parser.py  verify_tei_conversion.py
scripts/dedup/: __init__.py  benchmark.py  corpus.py  metrics.py  registry.py  text.py
scripts/dedup/embeddings/: __init__.py  chunking.py  encode.py  train_fasttext.py
scripts/dedup/methods/: __init__.py  base.py  chunked_embedding.py  chunked_minhash.py  fasttext_embedding.py  minhash_datasketch.py  minhash_os_jaccard.py  minhash_os_query.py  minhash_os_sidecar.py
tests/dedup/: test_chunked_minhash.py  test_corpus.py  test_metrics.py  test_minhash_os_sidecar.py
